fixed epic spacing

--- a/src/main/resources/css/EpicPlugin.css
+++ b/src/main/resources/css/EpicPlugin.css
@@ -276,7 +276,7 @@ ul.inline > li {
 	margin-bottom: 3px;
 }
 
-ul.inline > .epic-container {
+ul.inline .epic-container {
 	margin-top: 16px;
 	margin-bottom: 20px;
 }
@@ -298,7 +298,7 @@ ul.inline > .epic-container {
 	height: 40px;
 	width: 40px;
 	background: #f5f5f5;
-	top: -65px;
+	top: -50px;
 	left: calc(50% - 35px);
 	text-align: center;
 	box-shadow: 3px 3px 5px #888888;
