--- a/src/main/resources/css/EpicPlugin.prefixed.css
+++ b/src/main/resources/css/EpicPlugin.prefixed.css
@@ -303,7 +303,7 @@ ul.inline > li {
 	margin-bottom: 3px;
 }
 
-ul.inline > .epic-container {
+ul.inline .epic-container {
 	margin-top: 16px;
 	margin-bottom: 20px;
 }
@@ -325,7 +325,7 @@ ul.inline > .epic-container {
 	height: 40px;
 	width: 40px;
 	background: #f5f5f5;
-	top: -65px;
+	top: -50px;
 	left: calc(50% - 35px);
 	text-align: center;
 	-webkit-box-shadow: 3px 3px 5px #888888;
